--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.18",
+    "@types/lodash": "^4.14.141",
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "@types/react-redux": "^7.1.4",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/redux-form": "^8.1.7",
+    "axios": "^0.19.0",
+    "lodash": "^4.17.15",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-form": "^8.2.6",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.6.3"
   },
   "scripts": {
